src/index.css
html {
  margin: 0;
  padding: 0;
  height: 100%;
  height: 100%;
}

body {
  font-family:
    -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial,
    sans-serif;
  margin: auto;
  background: #202020;

  color: white;

  height: 100%;
  margin: 0;
  padding: 0;

  -webkit-user-select: none; /* Safari */
  -moz-user-select: none;    /* Firefox */
  -ms-user-select: none;     /* Internet Explorer/Edge */
  user-select: none;         /* Standard syntax */

  /* overflow-y: hidden; */
}

h4 {
  margin: 0;
  color: white;
  font-size: 1.1rem;
}

.file-entry {
  display: flex;
  gap: 20px;
  justify-content: space-between;
  align-items: flex-start;
  
  border-radius: 8px;
  padding: 5px 10px;
  margin: 5px 0px 5px 0px;
  /* box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.1); */
  color: white;
  /* background-color: #282828; */

  overflow-x: hidden;
  white-space: normal;
}

.file-entry .left-panel {
  /* min-width: 150px; */
  width: calc(100% - 148px);
}

.file-entry img {
  max-width: 148px;
  max-height: 148px;
}

.details-list {
  list-style-type: none;
  padding-left: 8px;
  margin-top: 4px;
}

.qr-wrapper {
  position: relative;
  text-align: center;
  font-size: 0.8rem;
  color: #808080;
  font-style: italic;
  cursor: pointer;

  white-space: normal;
}

.qr-overlay {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  opacity: 0;

  background-color: #404040a0;

  /* background: rgba(0, 0, 0, 0.5);
  color: white;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 0;
  transition: opacity 0.2s; */
}
.qr-wrapper:hover .qr-overlay {
  opacity: 1;
}

.qr-overlay-text {
  display: flex;
  height: 100%;
  align-items: center;
  justify-content: center;
  color: #fff;
  text-shadow: 0px 0px 8px black, 0px 0px 8px black, 0px 0px 8px black;
  opacity: 1;
}

.plus-btn {
  margin: auto;
  margin-right: 10px;
  /* margin-top: 20px; */
  position: relative;
  width: 25px;
  height: 25px;
  /* background-color: #FF353C; */
  border-radius: 5px;
  cursor: pointer;
  /* transition: background-color 0.2s; */
}
.plus-btn:hover {
  background-color: #FF4a51;
}

.plus-btn::before,
.plus-btn::after {
  content: "";
  position: absolute;
  background-color: #fff;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.plus-btn::before {
  width: 0.7rem;
  height: 2px;
}

.plus-btn::after {
  width: 2px;
  height: 0.7rem;
}

.no-files-msg {
  background-color: #202020;
  color: #606060;
  font-style: italic;
  padding: 12px;
  text-align: center;
  border-radius: 8px;
  margin: auto;
  margin-top: 20px;
}

.outer-wrapper {
  display: flex;
  flex-direction: row;
  margin: 0;
  padding: 0;
  height: 100%;
}

.nav-sidebar {
  display: flex;
  margin-left: 0;
  margin-top: 0;
  margin-right: 5px;
  height: auto;
  padding: 0;
  flex-direction: column;
  width: 35px;
}

.ip-selector {
  display: inline-block;
  border-radius: 5px;
}

.ip-selector:hover {
  background-color: #303030;
}

.ip-selector h4, .ip-selector select {
  display: inline-block;

  padding: 10px 0 10px 0;
  margin: auto;
  appearance: none;
  text-align: center;
  font-size: 16px;
  /* border: 1px solid #ccc; */
  border: none;
  outline: none;
  background-color: #00000000;
  color: white;
  width: 148px;
}

.ip-selector select option {
  background-color: #282828;
  border-radius: 4px;
}

.ip-selector option:hover {
  background-color: #303030;
}

/* .sidebar-button .button-icon {
  cursor: default;
  margin: auto;
  font-size: 1rem;
} */

.button-icon {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  padding: 0;
  margin: 0;
}

.outboxItemCloseBttn {
  cursor: pointer;
  color: white;
  font-size: 0.8rem;
  /* line-height: 100%; */
  margin: auto;
  /* margin-left: 0; */
  margin-right: 0;
  height: 100%;
  /* margin-left: 10px; */
}

/* .outboxItemCloseBttn::after {
  content: "✖";
  opacity: 0;
}

.outboxItemCloseBttn:hover::after {
  opacity: 1;
} */

.content-wrapper {
  width: calc(100% - 5px);
  height: calc(100% - 5px);
  margin-left: 0px;
  margin-top: 0;

  display: flex;

  /* padding-left: 15px;
  padding-top: 8px; */

  border-radius: 6px 0 0 0;
  /* max-width: 38rem; */
  /* margin: auto; */
  background-color: #282828;

  white-space: nowrap;
  overflow-y: hidden;
}

#left-summary-panel, #right-detail-panel, #right-blank-panel {
  vertical-align: top;
}

#left-summary-panel {
  /* width: calc(30% - 24px); */
  width: 260px;
  /* min-width: 260px; */
  color: white;
  overflow-y: auto;
  /* padding-right: 15px; */
  /* height: calc(100% - 8px); */
  height: 100%;
  margin-top: 8px;
  margin-left: 0;
  /* margin-right: 4px; */

  white-space: normal;
}

#right-detail-panel, #right-blank-panel {
  background-color: #303030;
  border-radius: 10px;
  margin-right: 10px;
  width: calc(100% - 260px - 10px);
  margin-top: 10px;
  margin-bottom: 10px;
  height: calc(100% - 20px);
}

#right-blank-panel {
  display: flex;
  flex-direction: column;
  justify-content: center;
  /* align-items: space-around; */
  /* border: 3px dashed #404040; */
  background-color: #202020;
  /* width: calc(50% - 60px); */
  /* height: calc(30% - 6px); */
  /* min-height: 200px;
  min-width: calc(500px - 12px);
  margin-top: auto;
  margin-bottom: auto;
  margin-left: auto; */
  /* margin-right: auto; */
  /* padding: 5px 0 0 0; */
}

/* #right-blank-panel {
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: inherit;
  border: 1px dashed #404040;
  width: fit-content;
  max-width: calc(70% - 16vw);
  height: fit-content;
  max-height: calc(100% - 36vh);
  padding: 8vh calc(8vw - 10px);
  
  margin-top: 20vh;
  margin: auto;
} */

.right-panel-flexrow {
  display: flex;
  flex-direction: row;
  float: right;
  margin-right: 10px;
}

